crates/swc_ecma_parser/tests/test262-error-references/fail/dfc6f1cc5533e0bb.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/dfc6f1cc5533e0bb.js:1:5
  |
1 | for(({a}) in 0);
  |     ^^^^^

